libapache2-mod-chxj (0.12.11-1) unstable; urgency=low

  * Changed features.
    - After it had converted it by a former image,
      the priority of the image type was selected.
      (Requested by someone. thanks!)

 -- Atsushi Konno <konn@users.sourceforge.jp>  Tue, 22 Jul 2008 12:52:13 +0900

libapache2-mod-chxj (0.12.10-1) unstable; urgency=low

  * Added Features.
    - For anchor's name for cookie simulator.
    (Requested by tiruda1600 _at_ users.sourceforge.jp. thanks!)

 -- Atsushi Konno <konn@users.sourceforge.jp>  Mon, 21 Jul 2008 15:11:53 +0900

libapache2-mod-chxj (0.12.9-1) unstable; urgency=low

  * Changed Specification.
    - When the size after it reduces becomes 0, it compels it to 1.
      (Reported by someone. thanks!)
  * Emergency measure
    - MagickQuantizeImage function doesn't return.
      (Reported by someone. thanks!)

 -- Atsushi Konno <konn@users.sourceforge.jp>  Sun, 20 Jul 2008 23:28:36 +0900

libapache2-mod-chxj (0.12.8-1) unstable; urgency=low

  * Added function.
    - The au terminal is handled as NO Cookie model. (For http -> https or https -> http exchange.)
      (Requested by someone. thanks!)

 -- Atsushi Konno <konn@users.sourceforge.jp>  Sun, 13 Jul 2008 15:20:39 +0900

libapache2-mod-chxj (0.12.7-1) unstable; urgency=low

  * Fixed bug.
    - It doesn't become a conversion target when setting as JXHTML.
     (Reported by someone. thanks!)

  * Added name attribute of form tag.
    (Requested by tiruda1600 _at_ users.sourceforge.jp. thanks!)

 -- Atsushi Konno <konn@users.sourceforge.jp>  Sat, 12 Jul 2008 02:11:04 +0900

libapache2-mod-chxj (0.12.6-1) unstable; urgency=low

  * Fixed bug.
    - cannot be redirected since 0.12.4
      (Reported by tiruda1600 _at_ users.sourceforge.jp. thanks!)

 -- Atsushi Konno <konn@users.sourceforge.jp>  Thu,  3 Jul 2008 22:06:28 +0900

libapache2-mod-chxj (0.12.5-1) unstable; urgency=low

  * Fixed bug.
    - The bug that was not able to be displayed correctly when a double quart